--- a/docs/faststore/components/molecules/card.mdx
+++ b/docs/faststore/components/molecules/card.mdx
@@ -52,7 +52,7 @@ import { Card } from "@faststore/ui";
 
 To apply styles, include the following in your stylesheet:
 
-```scss copy
+```scss
 @import "@faststore/ui/src/components/molecules/Card/styles.scss";
 ```
 
