fix code block backticks

--- a/docs/faststore/components/molecules/search-history.mdx
+++ b/docs/faststore/components/molecules/search-history.mdx
@@ -23,7 +23,7 @@ Responsible for showing the latest terms searched by a user. This component is p
     </OverviewSection>
   </Tab>
   <Tab>
-    ``tsx
+    ```tsx
     <SearchHistory title="History">
       <SearchHistoryTerm value="Headphone" linkProps={{ href: "#" }} />
       <SearchHistoryTerm value="Audio & Video" linkProps={{ href: "#" }} />
